API: feat: add código de acesso no e-mail enviado na matrícula.

--- a/API/src/app/views/emails/resistration.hbs
+++ b/API/src/app/views/emails/resistration.hbs
@@ -5,6 +5,7 @@
 <strong>Olá</strong>
 <p>Houve uma nova matricula, confira os detalhes abaixo:</p>
 <p>
+  <strong>Código de acesso: </strong> {{cod}}<br/>
   <strong>Aluno: </strong> {{student}}<br/>
   <strong>Início: </strong> {{start}}<br/>
   <strong>Fim: </strong> {{end}}<br/>
